fixed horizontal scroll issue

--- a/css/scss/_Contact.scss
+++ b/css/scss/_Contact.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 2em 17em;
+    padding: 2em 14em;
 
     &_title {
         font-family: 'Lato', sans-serif;
