--- a/css/scss/_Plain.scss
+++ b/css/scss/_Plain.scss
@@ -2,7 +2,7 @@
 
 .plain_text {
     text-align: center;
-    padding: 3.5em 17em;
+    padding: 3.5em 14em;
 
     &_title, &_para {
         font-family: 'Lato', sans-serif;
