--- a/css/style.scss
+++ b/css/style.scss
@@ -14,20 +14,8 @@
     font-family: 'Lato', sans-serif;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+body {
+}
 
 
 
